--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,8 @@
     <span class="m-1">Loading...</span>
   </div>
 </app-root>
+<!-- app.component.html -->
+<app-real-time-graph></app-real-time-graph>
+
 </body>
 </html>
