clock added and its working

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
     name="keyword"
   />
+  <script src="./assets/js/jquery-1.11.1.min.js"></script>
+  <script src="./assets/js/today-clock.js"></script>
+  <script src="./assets/js/ist.js"></script>
+  <script src="./assets/js/astro.js"></script>
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <title>CoreUI Free Angular Admin Template</title>
 </head>
